Added wordmark and logo svg files

--- a/_includes/CLAIR-wordmark-footer.html
+++ b/_includes/CLAIR-wordmark-footer.html
@@ -8,4 +8,10 @@
   <p style="margin: 12px 0;" class="footer__title">
     Archives, Memory,<br> and Preservation Lab
   </p>
+  <p class="footer-address">
+    2313 Girvetz Hall<br>
+    University of California, Santa Barbara<br>
+    Santa Barbara, CA 93106-2150<br>
+    Campus Mail Code: 2150<br>
+  </p>
 </div>
