--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,22 +1,17 @@
-<footer class="footer">
+<footer class="footer" style="background: #003660">
 	<div class="wrap grid">
 
-		{% if site.data.settings.footer_settings.logo_image %}
-		<a href="{{ site.baseurl }}/" class="footer__logo">
-			<img src="{{ site.data.settings.footer_settings.logo_image | relative_url }}" class="footer__logo__img">
-		</a>
-		{% else %}
-		<a href="{{ site.baseurl }}/" class="footer__title">
-			{{ site.data.settings.basic_settings.site_title }}
-		</a>
-		{% endif %}
-
-		<div class="footer__copyright">
-			{% if site.data.settings.footer_settings.tagline %}
-			<p>{{ site.data.settings.footer_settings.tagline }}</p>
-			{% endif %}
-			<span class="footnote">© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span>
-			<a href="https://jekyllthemes.io" class="footnote" target="_blank">Jekyll Themes</a>
+		{% include UCSB-wordmark-footer.html %}
+		{% include CLAIR-logo-white.html %}
+	</div>
+</footer>
+<div class="footer-bottom">
+	
+		<div class="wrap grid">
+			<span class="ucsb-copyright" style="padding-top:20px; font-size: 12px">Copyright © {{ 'now' | date: "%Y" }} The Regents of the University of California. All Rights Reserved. <a href="https://www.ucsb.edu/terms-of-use" class="terms" style="margin-left: 16px">Terms of Use</a> 
+			<a href="/accessibility" class="terms" style="">Accessibility</a></span>
 		</div>
-
+			
+</div>
+	
 	</div>
