--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -7,7 +7,13 @@
 h1,
 .h1,
 h2,
-.h2,
+.h2, {
+  font-family: $display-font;
+  color: $text-dark-color;
+  margin-top: 1rem;
+}
+
+
 h3,
 .h3,
 h4,
