--- a/_includes/CLAIR-logo-white.html
+++ b/_includes/CLAIR-logo-white.html
@@ -1,4 +1,5 @@
  <div class="clair-logo">
+  <a href="https://clair.ucsb.edu">
   <svg version="1.1" id="CLAIR_wordmark" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 539.9 105.6" style="enable-background:new 0 0 539.9 105.6;" xml:space="preserve">
   <style type="text/css">
     .st0{enable-background:new    ;}
@@ -1142,4 +1143,5 @@
     </g>
   </g>
   </svg>
+  </a>
  </div>
