Added purple footer

--- a/_includes/blue-footer.html
+++ b/_includes/blue-footer.html
@@ -1,11 +1,11 @@
-<footer class="footer" style="background: #8B467D">
+<footer class="footer" style="background: #003660">
 	<div class="wrap grid">
 
 		{% include UCSB-wordmark-footer.html %}
 		{% include CLAIR-logo-white.html %}
 	</div>
 </footer>
-<div class="footer-bottom" style="background: #743A6A;">
+<div class="footer-bottom" style="background: #002b4c">
 	
 		<div class="wrap grid">
 			<span class="ucsb-copyright" style="padding-top:20px; font-size: 12px">Copyright © {{ 'now' | date: "%Y" }} The Regents of the University of California. All Rights Reserved. <a href="https://www.ucsb.edu/terms-of-use" class="terms" style="margin-left: 16px">Terms of Use</a> 
