Added UCSB webfonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
 	<!-- Font Embed Code -->
 	{{ site.data.settings.font_settings.font_embed }}
 	{% endif %}
+	<link href="https://webfonts.brand.ucsb.edu/webfont.min.css" rel="stylesheet">
 
 	<!-- Styles -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
