--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 	
 		<div class="wrap grid">
 			<span class="ucsb-copyright" style="padding-top:20px; font-size: 12px">Copyright © {{ 'now' | date: "%Y" }} The Regents of the University of California. All Rights Reserved. <a href="https://www.ucsb.edu/terms-of-use" class="terms" style="margin-left: 16px">Terms of Use</a> 
-			<a href="/accessibility" class="terms" style="">Accessibility</a></span>
+			<a href="https://clair.ucsb.edu/accessibility" class="terms" style="">Accessibility</a></span>
 		</div>
 			
 </div>
