Include link to map in footer

--- a/_includes/UCSB-wordmark-footer.html
+++ b/_includes/UCSB-wordmark-footer.html
@@ -8,7 +8,7 @@
     Archives, Memory,<br> and Preservation Lab
   </p>
   <p class="footer-address">
-    2313 Girvetz Hall<br>
+    <a href="https://ampl.clair.ucsb.edu/map" style="color: #fff; text-decoration: none;">2313 Girvetz Hall</a><br>
     University of California, Santa Barbara<br>
     Santa Barbara, CA 93106-2150<br>
     Campus Mail Code: 2150<br>
