--- a/css/style.scss
+++ b/css/style.scss
@@ -176,6 +176,7 @@ $baseurl: '{{ site.baseurl }}';
 @import "_includes/_component__post-card";
 @import "_includes/_section__about";
 @import "_includes/_section__recent-posts";
+@import "_includes/_component__toggle";
 
 
 
