--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -126,7 +126,7 @@ h6,
   a {
     font-weight: 500;
     text-decoration: none;
-    text-decoration-color: transparentize($color: $accent-color, $amount: 0.8);
+    text-decoration-color: rgba($accent-color, 0.2);
   }
 
   @include mq(tabletp) {
