--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,12 @@
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="icon" type="image/png" href="/favicon.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 	<title>{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} –
 		{{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}</title>
 	<meta name="description" content="{{ page.description | strip_html | xml_escape }}">
